@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/tachyon/tachyon-0.98.9-r1.ebuild,v 1.1 2010/04/16 20:58:16 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/tachyon/tachyon-0.98.9-r1.ebuild,v 1.2 2010/11/08 18:45:47 xarthisius Exp $
 
 EAPI="2"
 
@@ -15,7 +15,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="doc examples jpeg mpi opengl png threads"
 
-CDEPEND="jpeg? ( media-libs/jpeg )
+CDEPEND="jpeg? ( virtual/jpeg )
 	mpi? ( virtual/mpi )
 	opengl? ( virtual/opengl )
 	png? ( media-libs/libpng )"
