@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/tachyon
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/tachyon/ChangeLog,v 1.3 2010/04/16 20:58:16 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/tachyon/ChangeLog,v 1.4 2010/11/08 18:45:47 xarthisius Exp $
+
+  08 Nov 2010; Kacper Kowalik <xarthisius@gentoo.org>
+  -tachyon-0.98.9.ebuild, tachyon-0.98.9-r1.ebuild:
+  media-libs/jpeg -> virtual/jpeg. Drop old.
 
 *tachyon-0.98.9-r1 (16 Apr 2010)
 
